// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"ShoppingList\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"ShoppingList\\"

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"ShoppingList\\"
const resolvers_0 = {
  todos() {},
  items() {}
}
const name_1 = \\"Items\\"
const resolvers_1 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import projection_1 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_1 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"ShoppingList\\"
const name_1 = \\"Items\\"

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, projection: projection_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"ShoppingList\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"ShoppingList\\"
const adapter_0 = {
  \\"module\\": process.env.READ_MODEL_TODOS_ADAPTER,
  \\"options\\": {
    \\"size\\": process.env.READ_MODEL_TODOS_OPTIONS_SIZE
  }
}
const adapterModule_0 = interopRequireDefault(
  eval('require(adapter_0.module)')
).default
const adapterOptions_0 = adapter_0.options

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

export default readModels
"
`;

exports[`config with storage works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"ShoppingList\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import adapterModule_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\"

const name_0 = \\"ShoppingList\\"
const adapterOptions_0 = {
  \\"size\\": 100
}

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

export default readModels
"
`;
